--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,19 @@ android {
         versionName "2.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a", "armeabi", "arm64-v8a", "arm","x86"
+        }
     }
+//    sourceSets.main {
+//        jni.srcDirs = []
+//        jniLibs.srcDir "src/main/libs"
+//    }
+//    repositories {
+//        flatDir {
+//            dirs 'libs'
+//        }
+//    }
     dataBinding {
         enabled = true
     }
@@ -44,7 +56,7 @@ dependencies {
     compile files('libs/xUtils-2.6.14.jar')
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-//    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    //    compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.7.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'org.greenrobot:greendao:3.2.2'
@@ -59,8 +71,6 @@ dependencies {
     implementation files('libs/core.jar')
     implementation files('libs/scanSDK.jar')
     implementation files('libs/platform_sdk_v2.3.706.jar')
-
-
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'com.squareup.okio:okio:1.9.0'
@@ -69,8 +79,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'io.reactivex:rxjava:1.2.1'
     implementation 'io.reactivex:rxandroid:1.2.0'
-
     compile 'com.android.support:cardview-v7:26.1.0'
-    compile "com.orhanobut:hawk:2.0.1"
-//    compile 'com.jude:easyrecyclerview:4.4.2'
+    compile 'com.orhanobut:hawk:2.0.1'
+    //    compile 'com.jude:easyrecyclerview:4.4.2'
+    implementation files('libs/DeviceAPIver20160627.jar')
 }
