--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 #com.android.build.gradle.overridePathCheck=true
 #android.enableAapt2=false
+android.useDeprecatedNdk=true;
