--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.orhanobut:hawk:2.0.1'
     //    compile 'com.jude:easyrecyclerview:4.4.2'
-//    implementation files('libs/DeviceAPIver20160627.jar')
+    //    implementation files('libs/DeviceAPIver20160627.jar')
+    implementation files('libs/mediatek-android.jar')
 }
