--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'org.greenrobot.greendao'
 //apply plugin: 'android-apt'
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
@@ -41,7 +41,7 @@ android {
 }
 
 greendao {
-    schemaVersion 4
+    schemaVersion 5
     daoPackage 'com.fangzuo.greendao.gen'
     targetGenDir 'src/main/java'
 }
@@ -50,24 +50,24 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/android-async-http-1.4.8.jar')
-    compile files('libs/httpcore-4.0-alpha5.jar')
-    compile files('libs/nineoldandroids-2.4.0.jar')
-    compile files('libs/xUtils-2.6.14.jar')
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation files('libs/android-async-http-1.4.8.jar')
+    implementation files('libs/httpcore-4.0-alpha5.jar')
+    implementation files('libs/nineoldandroids-2.4.0.jar')
+    implementation files('libs/xUtils-2.6.14.jar')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     //    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'org.greenrobot:greendao:3.2.2'
-    compile 'org.greenrobot:greendao-generator:3.2.2'
-    compile 'com.jakewharton:butterknife:8.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'org.greenrobot:greendao-generator:3.2.2'
+    implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'pub.devrel:easypermissions:0.1.5'
-    compile 'com.android.support:support-v4:26.1.0'
+    implementation 'pub.devrel:easypermissions:0.1.5'
+    implementation 'com.android.support:support-v4:26.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.android.support:design:26.1.0'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.android.support:design:26.1.0'
 //    implementation files('libs/core.jar')
     implementation files('libs/scanSDK.jar')
     implementation files('libs/platform_sdk_v2.3.706.jar')
@@ -79,9 +79,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'io.reactivex:rxjava:1.2.1'
     implementation 'io.reactivex:rxandroid:1.2.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.orhanobut:hawk:2.0.1'
-    //    compile 'com.jude:easyrecyclerview:4.4.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.orhanobut:hawk:2.0.1'
+    implementation 'com.jude:easyrecyclerview:4.4.2'
     //    implementation files('libs/DeviceAPIver20160627.jar')
     implementation files('libs/mediatek-android.jar')
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
