--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
     //    implementation files('libs/DeviceAPIver20160627.jar')
     implementation files('libs/mediatek-android.jar')
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+
+//    implementation 'com.google.android.material:material:1.1.0'
 }
